<?xml version="1.0"?>
<package format="3">
  <name>tof_avoider</name>
  <version>0.0.1</version>
  <description>ToF obstacle avoidance with LEDs: green forward, blink red on obstacle/turn.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>duckietown_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
