<?xml version="1.0"?>
<package format="3">
  <name>tof_stop_on_obstacle</name>
  <version>0.0.1</version>
  <description>Stops Duckiebot when ToF detects an obstacle; LEDs show state.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>duckietown_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
